--- a/Roskilde Resturants App/View/DetailedPage.xaml
+++ b/Roskilde Resturants App/View/DetailedPage.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModel="using:Roskilde_Resturants_App.ViewModel"
     mc:Ignorable="d">
-    <Grid Background="{ThemeResource AppBarBorderThemeBrush}">
+    <Grid Background="{ThemeResource AppBarItemForegroundThemeBrush}">
         <Grid.ChildrenTransitions>
             <TransitionCollection>
                 <EntranceThemeTransition/>
